--- a/pages/web.html
+++ b/pages/web.html
@@ -8,5 +8,18 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
-
+    <body>
+        <div class="jumbotron text-center main-header">
+            <h1 class="main-title">The World Wide Web - Changing the World</h1>
+            <p class="main-title">The greatest innovation of the information age.</p>
+        </div>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
+            <div class="container">
+                <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="https://github.com/nwoodruff149">GitHub Profile</a>
+                <a class="nav-item nav-link" href="https://github.com/nwoodruff149/CompSciApplications">Site Repo</a>
+                </div>
+            </div>
+        </nav>
+    </body>
 </html>
