--- a/pages/web.html
+++ b/pages/web.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
             <div class="container">
                 <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="https://github.com/nwoodruff149">GitHub Profile</a>
+                <a class="nav-item nav-link active" href="../index.html">Main Page</a>
                 <a class="nav-item nav-link" href="https://github.com/nwoodruff149/CompSciApplications">Site Repo</a>
                 </div>
             </div>
