--- a/pages/web.html
+++ b/pages/web.html
@@ -22,5 +22,12 @@
                 </div>
             </div>
         </nav>
+
+        <div class = "container">
+            <h1>Could you live without it?</h1>
+            <p>Imagine a world in which the World Wide Web didn't exist. Google, Facebook, Amazon and all of those services we take for granted today are just glimmers in some programmer's eye. That was the reality just 25 years ago. Not since the Industrial Revolution has there been such a transformation in the lifestyles of people all over the globe. The Web, and all the advacements it has brought, makes our lives almost unrecognisable to people living just a few decades ago.</p>
+            <p>In today's world, information is readily available on a scale never seen before in human history. With a device that sits in the palm of our hand, we have quicker access to information than a scholar standing in the middle of the Library of Alexandria. With these same devices (and the advancements of the Web), it's possible to speak, face-to-face, with people all over the globe in an instant. Decades ago, this would have been expensive - out of reach for most people. Centuries ago, it was a feat that some of the greatest empires of Europe struggled with. Now anyone with an internet connection and a phone can communicate across the oceans</p>
+        </div>
+
     </body>
 </html>
