--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </div>
 
 <center><h3><bold>White Hat Hacking</bold></h3></center>
-<img src="https://www.google.co.in/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiBhryngdPlAhVJcBQKHVRQCEMQjRx6BAgBEAQ&url=https%3A%2F%2Fhouseofit.com.au%2Fthe-white-hat-hackers-and-what-they-do%2F&psig=AOvVaw38A3YPv_ytEcuuDFrK2Zj5&ust=1573041204115088">
+<img src="image1.jpg">
       
 </body>
 </html>
