Added image and caption

--- a/pages/web.html
+++ b/pages/web.html
@@ -41,6 +41,13 @@
                 </div>
             </div>
         </div>
+        <div class = "container text-center">
+            <figure class = "figure">
+                <img src="../images/90sweb.jpg" class="img-fluid">
+                <figcaption class="figure-caption">The 90s did see some questionable design choices on the web.</figcaption>
+            </figure>
+        </div>
+        
 
     </body>
 </html>
