New section started

--- a/pages/web.html
+++ b/pages/web.html
@@ -48,6 +48,12 @@
             </figure>
         </div>
         
+        <div class = "container">
+            <h2>A Surprisingly Open World</h2>
+            <p>
+                In contrast to a lot of the technological and software developments that took off in the 90s (e.g. Windows) 
+            </p>
+        </div>
 
     </body>
 </html>
