--- a/hacking.html
+++ b/hacking.html
@@ -17,13 +17,12 @@
 
 <body>
 <div class="jumbotron text-center">
-  <h1>Best Applications of Computing</h1>
+  <h1>Best Application of Computing</h1>
   <p>In Society!</p>
   <p>Yes, there are a millions applications that can be found cause come on we live in the 21st century..but the best??.. Here's what I think ;)</p>
 </div>
 
 <center><h3><bold>White Hat Hacking</bold></h3></center>
-<img src="image1.jpg">
       
 </body>
 </html>
