--- a/pages/web.html
+++ b/pages/web.html
@@ -37,7 +37,7 @@
                     <p>Even now, the scope of the web is ever growing. Countries like China and India are increasingly coming online, particularly in the middle-class urban communities. As millions of people experience the web for the first time, they become as equally connected to the rest of the world as they are to their closest neighbour. Imagine getting online to find almost any product imagineable just a few mouse clicks away, distant friends and family available more readily than ever before, and a wealth of information just a search away. Your world would be irreversibly changed. That is the change the web has brought about in the past 26 years.</p>
                 </div>
                 <div class = "col">
-                    <p>A group I'd like to focus on in particular is the elderly. Whilst they are typically late adopters of new technologies, the web has begun to permeate their lives, in many cases for the better. Thanks to the web, grandparents can follow the lives of their family with ease through the lens of social media. Speaking anecdotally, this is a huge help for grandparents who struggle to get out of the house and therefore struggle to see relatives. In some cases, it also allows them to reconnect with old colleagues that they may never have spoken to again otherwise. Video calling and VOIP are yet more technologies reliant on the web that help connect grandparents to their distant families. No longer must the elderly become isolated in their twilight years, thanks to the advancements of the web.</p>
+                    <p>A group I'd also like to talk about is the elderly. Whilst they are typically late adopters of new technologies, the web has begun to permeate their lives, in many cases for the better. Thanks to the web, grandparents can follow the lives of their family with ease through the lens of social media. Speaking anecdotally, this is a huge help for grandparents who struggle to get out of the house and therefore struggle to see relatives. In some cases, it also allows them to reconnect with old colleagues that they may never have spoken to again otherwise. Video calling and VOIP are yet more technologies reliant on the web that help connect grandparents to their distant families. No longer must the elderly become isolated in their twilight years, thanks to the advancements of the web.</p>
                 </div>
             </div>
         </div>
@@ -50,9 +50,8 @@
         
         <div class = "container">
             <h2>A Surprisingly Open World</h2>
-            <p>
-                In contrast to a lot of the technological and software developments that took off in the 90s (e.g. Windows) 
-            </p>
+            <p>In contrast to a lot of the technological and software developments that took off in the 90s (e.g. Windows), the World Wide Web remained entirely open. Sir Tim Berners-Lee never patented the World Wide Web or any of the technologies behind it, ensuring that any developer woulds be able to use his work. This helped cement the Web's dominance over competitors like Gopher with people and organisations setting up their own servers. The web was built from the very start on the idea of the free exchange of information - an idea it has managed to stay mostly true to.</p>
+            <p>Of course, the web is not a communist utopia with everything free for all. Business naturally drives many of the large websites currently active. However, where previous networks on the budding Internet were exclusively for academics or the military, the Web was open to all.</p>
         </div>
 
     </body>
