--- a/pages/encryption.html
+++ b/pages/encryption.html
@@ -29,21 +29,28 @@
                 <div class="col">
                     <h2>Overview</h2>
                     <p>In cryptography, encryption is a process in which information is encoded such that only authorised users can access it. More information is available on Wikipedia <a href="https://en.wikipedia.org/wiki/Encryption">here</a>.</p>
-                    <h2>History of Encryption</h2>
+                    <h2>Early uses of encryption</h2>
                     <h3>Ancient Greece, circa 600 BC</h3>
                     <p>One of the earliest known applications of encryption techniques was around 600 BC by the Spartans of Ancient Greece for the purpose of sending sensitive messages during battle. The encryption used was a leather strap wrapped around a wooden rod. When wrapped around the rod of correct radius, the message letters line up correctly and a message can be read.</p>
-                    <image src="../images/encryption-scytale.png" />
-                    <figcaption>Fig. 1</figcaption>
-                    <h2>Types of Encryption</h2>
-                    <p>There are two types of encryption:</p>
+                    <!--<image src="../images/encryption-scytale.png" />
+                    <figcaption>Fig. 1</figcaption>-->
+                    <h3>Ancient Rome, circa 60 BC</h3>
+                    <p>Around 60 BC, Julius Caesar invented the substitution cipher: this cipher shifts each letter forwards along the alphabet by a certain number of places. For example, using a shift of 3, A would become D, and Y would become B (as the end of the alphabet points to the start).</p>
+                    <image src="../images/encryption-caesar.png" />
+                    <figcaption>Fig. 2</figcaption>
+                    <h2>Modern uses of encryption</h2>
+                    <h3>Storage encryption</h3>
+                    <p>Information is often encrypted on storage, so that to any unauthorised person attempting to read the data without the key, it is unreadable. This can either be done wither with disk-level encryption, or filesystem-level encryption. Disk-level encryption encrypts the entire disk at shutdown, and decrypts it at startup - however, this creates a vulnerability if the computer is maliciously obtained at runtime: filesystem-level encryption aims to solve this by encrypting  files when they are not in use.</p>
+                    <h3>Transmission encryption</h3>
+                    <p>Information transmitted between two endpoints needs to be secure and verifiable to ensure that the transmission is legitimate. There are two types of transmission encryption:</p>
                     <ul>
                         <li>
                             Symmetric key
-                            <p>More info available <a href="https://en.wikipedia.org/wiki/Encryption#Types">here</a>.</p>
+                            <p>In this scheme, the encryption key is the same as the decryption key. Both the sender and receiver need to have the same key, but if any party gains this key, all the information is exposed. More info available <a href="https://en.wikipedia.org/wiki/Encryption#Types">here</a>.</p>
                         </li>
                         <li>
                             Public key
-                            <p>More info available <a href="https://en.wikipedia.org/wiki/Encryption#Types">here</a>.</p>
+                            <p>In this scheme, the encryption (public) key is public , but only the decryption (private) key is known to the receiver. Since the public key is obtainable from the private key, the receiver can identify whether the sender is genuine, and can then decrypt the information. More info available <a href="https://en.wikipedia.org/wiki/Encryption#Types">here</a>.</p>
                         </li>
                     </ul>
                 </div>
