--- a/pages/hacking.html
+++ b/pages/hacking.html
@@ -16,6 +16,7 @@
   </head>
 
 <body>
+<p>Hello</p>
 <div class="jumbotron text-center">
   <h1>Best Application of Computing</h1>
   <p>In Society!</p>
