Changed styling for image

--- a/pages/encryption.html
+++ b/pages/encryption.html
@@ -36,7 +36,9 @@
                     <figcaption>Fig. 1</figcaption>-->
                     <h3>Ancient Rome, circa 60 BC</h3>
                     <p>Around 60 BC, Julius Caesar invented the substitution cipher: this cipher shifts each letter forwards along the alphabet by a certain number of places. For example, using a shift of 3, A would become D, and Y would become B (as the end of the alphabet points to the start).</p>
-                    <image src="../images/encryption-caesar.png" />
+                    <div class="container text-center">
+                        <image width="250px" src="../images/encryption-caesar.png" />
+                    </div>
                     <figcaption>Fig. 2</figcaption>
                     <h2>Modern uses of encryption</h2>
                     <h3>Storage encryption</h3>
