Fixed index linking

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Encryption</title>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-        <link rel="stylesheet", type="text/css" href="style.css">
+        <link rel="stylesheet", type="text/css" href="styles/style.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -13,36 +13,21 @@
     </head>
     <body>
         <div class="jumbotron text-center main-header">
-            <h1 class="main-title">Encryption</h1>
+            <h1 class="main-title">Computer Science Applications</h1>
             <p class="main-title">A site dedicated to information on encryption</p>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
             <div class="container">
                 <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="https://github.com/nwoodruff149">GitHub Profile</a>
-                <a class="nav-item nav-link" href="https://github.com/nwoodruff149/encryption">Site Repo</a>
+                <a class="nav-item nav-link href="#">Home</a>
+                <a class="nav-item nav-link href="pages/encryption.html">Encryption</a>
+                <a class="nav-item nav-link href="pages/hacking.html">Hacking</a>
+                <a class="nav-item nav-link href="pages/iot.html">IoT</a>
+                <a class="nav-item nav-link href="pages/web.html">Web</a>
+                <a class="nav-item nav-link" href="https://github.com/nwoodruff149/CompSciApplications">Site Repo</a>
                 </div>
             </div>
         </nav>
-        <div class="container">
-            <div class="row">
-                <div class="col">
-                    <h2>Overview</h2>
-                    <p>In cryptography, encryption is a process in which information is encoded such that only authorised users can access it. More information is available <a href="https://en.wikipedia.org/wiki/Encryption">here</a>.</p>
-                    <h2>Types of Encryption</h2>
-                    <p>There are two types of encryption:</p>
-                    <ul>
-                        <li>
-                            Symmetric key
-                            <p>More info available <a href="https://en.wikipedia.org/wiki/Encryption#Types">here</a>.</p>
-                        </li>
-                        <li>
-                            Public key
-                            <p>More info available <a href="https://en.wikipedia.org/wiki/Encryption#Types">here</a>.</p>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        
     </body>
 </html>
