--- a/pages/encryption.html
+++ b/pages/encryption.html
@@ -17,13 +17,17 @@
             <p class="main-title">A site dedicated to information on encryption</p>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
-            <div class="container">
-                <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="https://github.com/nwoodruff149">GitHub Profile</a>
-                <a class="nav-item nav-link" href="https://github.com/nwoodruff149/encryption">Site Repo</a>
+                <div class="container">
+                    <div class="navbar-nav">
+                    <a class="nav-item nav-link" href="../index.html">Home</a>
+                    <a class="nav-item nav-link" href="#">Encryption</a>
+                    <a class="nav-item nav-link" href="hacking.html">Hacking</a>
+                    <a class="nav-item nav-link" href="iot.html">IoT</a>
+                    <a class="nav-item nav-link" href="web.html">Web</a>
+                    <a class="nav-item nav-link" href="https://github.com/nwoodruff149/CompSciApplications">Site Repo</a>
+                    </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
         <div class="container">
             <div class="row">
                 <div class="col">
