Navbar code implemented for hacking and encryption

--- a/pages/encryption.html
+++ b/pages/encryption.html
@@ -19,15 +19,15 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
                 <div class="container">
                     <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="../index.html">Home</a>
-                    <a class="nav-item nav-link" href="#">Encryption</a>
+                    <a class="nav-item nav-link active" href="../index.html">Home</a>
+                    <a class="nav-item nav-link" href="encryption.html">Encryption</a>
                     <a class="nav-item nav-link" href="hacking.html">Hacking</a>
                     <a class="nav-item nav-link" href="iot.html">IoT</a>
                     <a class="nav-item nav-link" href="web.html">Web</a>
                     <a class="nav-item nav-link" href="https://github.com/nwoodruff149/CompSciApplications">Site Repo</a>
                     </div>
                 </div>
-            </nav>
+        </nav>
         <div class="container">
             <div class="row">
                 <div class="col">
