--- a/pages/hacking.html
+++ b/pages/hacking.html
@@ -21,6 +21,18 @@
   <p>In Society!</p>
   <p>Yes, there are a millions applications that can be found cause come on we live in the 21st century..but the best??.. Here's what I think ;)</p>
 </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
+    <div class="container">
+        <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="../index.html">Home</a>
+        <a class="nav-item nav-link" href="encryption.html">Encryption</a>
+        <a class="nav-item nav-link" href="hacking.html">Hacking</a>
+        <a class="nav-item nav-link" href="iot.html">IoT</a>
+        <a class="nav-item nav-link" href="web.html">Web</a>
+        <a class="nav-item nav-link" href="https://github.com/nwoodruff149/CompSciApplications">Site Repo</a>
+        </div>
+    </div>
+</nav>
 
 <center><h3><bold>White Hat Hacking</bold></h3></center>
       
