--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
             <div class="container">
                 <div class="navbar-nav">
-                <a class="nav-item nav-link" href="#">Home</a>
+                <a class="nav-item nav-link active" href="#">Home</a>
                 <a class="nav-item nav-link" href="pages/encryption.html">Encryption</a>
                 <a class="nav-item nav-link" href="pages/hacking.html">Hacking</a>
                 <a class="nav-item nav-link" href="pages/iot.html">IoT</a>
