Updated <head> and subtitle of <body>

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Encryption</title>
+        <title>Applications of Computer Science</title>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
         <link rel="stylesheet", type="text/css" href="styles/style.css">
         <meta charset="utf-8">
@@ -14,7 +14,7 @@
     <body>
         <div class="jumbotron text-center main-header">
             <h1 class="main-title">Computer Science Applications</h1>
-            <p class="main-title">A site dedicated to information on encryption</p>
+            <p class="main-title">Four Times Computer Scientists Changed the World</p>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
             <div class="container">
