Implements sticky navbars

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 class="main-title">Computer Science Applications</h1>
             <p class="main-title">Four Times Computer Scientists Changed the World</p>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav sticky-top">
             <div class="container">
                 <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="#">Home</a>
