--- a/pages/hacking.html
+++ b/pages/hacking.html
@@ -21,7 +21,7 @@
   <p>In Society!</p>
   <p>Yes, there are a millions applications that can be found cause come on we live in the 21st century..but the best??.. Here's what I think ;)</p>
 </div>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav sticky-top">
     <div class="container">
         <div class="navbar-nav">
         <a class="nav-item nav-link active" href="../index.html">Home</a>
