--- a/pages/web.html
+++ b/pages/web.html
@@ -16,7 +16,7 @@
             <h1 class="main-title">The World Wide Web - Changing the World</h1>
             <p class="main-title">The greatest innovation of the information age.</p>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav sticky-top">
             <div class="container">
                 <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="../index.html">Home</a>
