--- a/pages/encryption.html
+++ b/pages/encryption.html
@@ -16,7 +16,7 @@
             <h1 class="main-title">Encryption</h1>
             <p class="main-title">A site dedicated to information on encryption</p>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav sticky-top">
                 <div class="container">
                     <div class="navbar-nav">
                     <a class="nav-item nav-link active" href="../index.html">Home</a>
@@ -27,7 +27,7 @@
                     <a class="nav-item nav-link" href="https://github.com/nwoodruff149/CompSciApplications">Site Repo</a>
                     </div>
                 </div>
-        </nav>
+            </nav>
         <div class="container">
             <div class="row">
                 <div class="col">
