Added introductory material to index.html

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                 </div>
             </div>
         </nav>
-        
+        <div class = "container">
+            <h1>Welcome to the Website</h1>
+            <p>The four of us, as computer scientists, have decided to create this website <s>because we had to for a formative assessment</s> to celebrate the work done by a number of computer scientists in recent decades. Here, you will find four innovations that have changed, or will likely go on to change, the world. After reading these, we hope you will realise the impact that developments in the field can have on the lives of ordinary people.</p>
+            <p>The first page on this site is about encryption, one of the technologies that the modern world depends on. Without it, there would be no internet banking, no private messaging and no privacy of any form whilst online. Following this, there is a page on hacking, in particular white hat hacking. Tying into encryption, cyber security is a field which all Internet users depend upon. Another development with incredibly promising potential is the Internet of Things. Quite a new term, the IoT is something you have probably used already without realising. Finally, we have a page about the World Wide Web, something which has defined the 21st Century and enables the page you are currently reading.</p>
+        </div>
     </body>
 </html>
