--- a/pages/iot.html
+++ b/pages/iot.html
@@ -16,11 +16,15 @@
             <h1 class="main-title">Internet of Things</h1>
             <p class="main-title">###text for subheading</p>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav sticky-top">
             <div class="container">
                 <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="https://github.com/nwoodruff149">GitHub Profile</a>
-                <a class="nav-item nav-link" href="https://github.com/nwoodruff149/encryption">Site Repo</a>
+                <a class="nav-item nav-link active" href="#">Home</a>
+                <a class="nav-item nav-link" href="pages/encryption.html">Encryption</a>
+                <a class="nav-item nav-link" href="pages/hacking.html">Hacking</a>
+                <a class="nav-item nav-link" href="pages/iot.html">IoT</a>
+                <a class="nav-item nav-link" href="pages/web.html">Web</a>
+                <a class="nav-item nav-link" href="https://github.com/nwoodruff149/CompSciApplications">Site Repo</a>
                 </div>
             </div>
         </nav>
