--- a/pages/iot.html
+++ b/pages/iot.html
@@ -3,7 +3,7 @@
     <head>
         <title>Internet of Things</title>
         <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-        <link rel="stylesheet", type="text/css" href="style.css">
+        <link rel="stylesheet", type="text/css" href="../styles/style.css">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
