--- a/pages/iot.html
+++ b/pages/iot.html
@@ -19,11 +19,11 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav sticky-top">
             <div class="container">
                 <div class="navbar-nav">
-                <a class="nav-item nav-link active" href="#">Home</a>
-                <a class="nav-item nav-link" href="pages/encryption.html">Encryption</a>
-                <a class="nav-item nav-link" href="pages/hacking.html">Hacking</a>
-                <a class="nav-item nav-link" href="pages/iot.html">IoT</a>
-                <a class="nav-item nav-link" href="pages/web.html">Web</a>
+                <a class="nav-item nav-link active" href="../index.html">Home</a>
+                <a class="nav-item nav-link" href="encryption.html">Encryption</a>
+                <a class="nav-item nav-link" href="hacking.html">Hacking</a>
+                <a class="nav-item nav-link" href="iot.html">IoT</a>
+                <a class="nav-item nav-link" href="web.html">Web</a>
                 <a class="nav-item nav-link" href="https://github.com/nwoodruff149/CompSciApplications">Site Repo</a>
                 </div>
             </div>
