--- a/pages/encryption.html
+++ b/pages/encryption.html
@@ -14,13 +14,13 @@
     <body>
         <div class="jumbotron text-center main-header">
             <h1 class="main-title">Encryption</h1>
-            <p class="main-title">A site dedicated to information on encryption</p>
+            <p class="main-title">A page dedicated to information on encryption</p>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-nav sticky-top">
                 <div class="container">
                     <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="../index.html">Home</a>
-                    <a class="nav-item nav-link" href="encryption.html">Encryption</a>
+                    <a class="nav-item nav-link" href="../index.html">Home</a>
+                    <a class="nav-item nav-link active" href="#">Encryption</a>
                     <a class="nav-item nav-link" href="hacking.html">Hacking</a>
                     <a class="nav-item nav-link" href="iot.html">IoT</a>
                     <a class="nav-item nav-link" href="web.html">Web</a>
@@ -34,16 +34,20 @@
                     <h2>Overview</h2>
                     <p>In cryptography, encryption is a process in which information is encoded such that only authorised users can access it. More information is available on Wikipedia <a href="https://en.wikipedia.org/wiki/Encryption">here</a>.</p>
                     <h2>Early uses of encryption</h2>
-                    <h3>Ancient Greece, circa 600 BC</h3>
-                    <p>One of the earliest known applications of encryption techniques was around 600 BC by the Spartans of Ancient Greece for the purpose of sending sensitive messages during battle. The encryption used was a leather strap wrapped around a wooden rod. When wrapped around the rod of correct radius, the message letters line up correctly and a message can be read.</p>
-                    <!--<image src="../images/encryption-scytale.png" />
-                    <figcaption>Fig. 1</figcaption>-->
-                    <h3>Ancient Rome, circa 60 BC</h3>
-                    <p>Around 60 BC, Julius Caesar invented the substitution cipher: this cipher shifts each letter forwards along the alphabet by a certain number of places. For example, using a shift of 3, A would become D, and Y would become B (as the end of the alphabet points to the start).</p>
+                    <ul>
+                        <li>
+                            <h4>Ancient Greece, circa 600 BC</h4>
+                            <p>One of the earliest known applications of encryption techniques was around 600 BC by the Spartans of Ancient Greece for the purpose of sending sensitive messages during battle. The encryption used was a leather strap wrapped around a wooden rod. When wrapped around the rod of correct radius, the message letters line up correctly and a message can be read.</p>
+                        </li>
+                        <li>
+                            <h4>Ancient Rome, circa 60 BC</h4>
+                            <p>Around 60 BC, Julius Caesar invented the substitution cipher: this cipher shifts each letter forwards along the alphabet by a certain number of places. For example, using a shift of 3, A would become D, and Y would become B (as the end of the alphabet points to the start).</p>
+                        </li>
+                    </ul>
                     <div class="container text-center">
                         <image width="250px" src="../images/encryption-caesar.png" />
                     </div>
-                    <figcaption>Fig. 2</figcaption>
+                    <figcaption>Caesar cipher encryption</figcaption>
                     <h2>Modern uses of encryption</h2>
                     <h3>Storage encryption</h3>
                     <p>Information is often encrypted on storage, so that to any unauthorised person attempting to read the data without the key, it is unreadable. This can either be done wither with disk-level encryption, or filesystem-level encryption. Disk-level encryption encrypts the entire disk at shutdown, and decrypts it at startup - however, this creates a vulnerability if the computer is maliciously obtained at runtime: filesystem-level encryption aims to solve this by encrypting  files when they are not in use.</p>
