Added Tim Berners-Lee photo to page

--- a/pages/web.html
+++ b/pages/web.html
@@ -30,13 +30,27 @@
         </nav>
 
         <div class = "container">
-            <h1>Could you Live Without it?</h1>
-            <p>Imagine a world in which the World Wide Web didn't exist. Google, Facebook, Amazon and all of those services we take for granted today are just glimmers in some programmer's eye. That was the reality just 25 years ago. Not since the Industrial Revolution has there been such a transformation in the lifestyles of people all over the globe. The Web, and all the advacements it has brought, makes our lives almost unrecognisable to people living just a few decades ago.</p>
-            <p>In today's world, information is readily available on a scale never seen before in human history. With a device that sits in the palm of our hand, we have quicker access to information than a scholar standing in the middle of the Library of Alexandria. With these same devices (and the advancements of the Web), it's possible to speak, face-to-face, with people all over the globe in an instant. Decades ago, this would have been expensive - out of reach for most people. Centuries ago, it was a feat that some of the greatest empires of Europe struggled with. Now anyone with an internet connection and a phone can communicate across the oceans</p>
+            <div class = "row">
+                <div class = "col-8">
+                    <h1>Could you Live Without it?</h1>
+                </div>
+            </div>
+            <div class = "row">
+                <div class = "col-8">
+                    <p>Imagine a world in which the World Wide Web didn't exist. Google, Facebook, Amazon and all of those services we take for granted today are just glimmers in some programmer's eye. That was the reality just 25 years ago. Not since the Industrial Revolution has there been such a transformation in the lifestyles of people all over the globe. The Web, and all the advacements it has brought, makes our lives almost unrecognisable to people living just a few decades ago.</p>
+                    <p>In today's world, information is readily available on a scale never seen before in human history. With a device that sits in the palm of our hand, we have quicker access to information than a scholar standing in the middle of the Library of Alexandria. With these same devices (and the advancements of the Web), it's possible to speak, face-to-face, with people all over the globe in an instant. Decades ago, this would have been expensive - out of reach for most people. Centuries ago, it was a feat that some of the greatest empires of Europe struggled with. Now anyone with an internet connection and a phone can communicate across the oceans as if they didn't exist.</p>
+                </div>
+                <div class = "col">
+                    <figure class = "figure">
+                        <img src="../images/timbl.jpg" class = "img-fluid" width = 100%>
+                        <figcaption class = "figure-caption">Creator of the Web, Sir Tim Berners-Lee.</figcaption>
+                    </figure>
+                </div>
+            </div>
         </div>
 
         <div class = "container">
-            <h2>The Revolution of our Time</h2>
+            <h2>The Revolution of our Times</h2>
             <p>Many advancements have been made in recent years: social media, e-commerce, VOIP, video streaming. Every single one of these innovations, that have changed the way we interact with the world and with each other in their own right, rely on the work done by Berners-Lee at CERN. Whilst the interactivity of the modern web was but a glimmer in his eye back in the 90s, the foundations set the stage for what was to come. Even in its nascent stages, the web had a transformative impact, particularly for businesses and academics. </p>
             <div class = "row">
                 <div class = "col">
